<resources>
    <string name="app_name">Sudoku</string>
    <string name="my_sudoku">My Sudoku</string>
    <string name="my_sudoku_bold">MY SUDOKU</string>
    <string name="select_items">Select Items</string>
    <string name="textview">TextView</string>
    <string name="play_bold">PLAY</string>
    <string name="select_level">Select Level</string>
    <string name="YouWin">You Win</string>
    <string name="do_you_want_to_return_home">Do you want to return home?</string>
    <string name="home">Home</string>
    <string name="replay">Replay</string>
    <string name="textview1">TextView</string>
    <string name="leadboard">Leadboard</string>
    <string name="your_score">Your score :</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="connect">Connect</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_upp">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_already_have_an_acount">You already have an acount?</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="you_don_t_have_account">You don\'t have account?</string>
    <string name="register_now">Register Now</string>
    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <string-array name="userNames">
        <item>Hamma</item>
        <item>Dali</item>
        <item>Khalil</item>
        <item>Youssef</item>
        <item>Narbi</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="you_highest_score">You Highest Score</string>
    <string name="___">_ _ _</string>
    <string name="_0">0</string>
</resources>